- add inline_links config to show action, display member links in show action loaded in page
- add :telephone list_ui displaying formatted phone number with tel: link
- add global config option to display reason for disabled action, authorized methods must return string with reason, and string is interpreted as not authorized
- fix select of existing record for nested subform
- fix apply constraints to parent (fix update columns on subform on embedded scaffold)
- fix for override form field and subform partials on AS controllers which are parent class for AS controllers, so they are shared by children classes
- fix translation for ActiveRecord enums
- fix do_refresh_list on actions with GET route, it used :id and :action from request for sorting and pagination links
- fix enabling draggable lists and sliders on new subform records
- fix updating column and changing from :hidden form_ui to different one
- fix searching with :multi_chosen search_ui
- fix human conditions for :chosen and :multi_chosen search_ui

= 3.4.42
- Fix for protected and private authorized methods

= 3.4.41.1
- Fix issue with id_helpers and active_scaffold_sortable, caused by last security fix

= 3.4.41
- Fix XSS via eid param

= 3.4.40
- allow to exclude bitfield column
- replace some uses of $ with jQuery

= 3.4.39
- fix removing delete link with config.delete.link = false, broken on 3.4.38
- fix position of nested action groups
- fix human conditions with rails 4.2 and json session
- fix search conditions for decimal columns on rails 4.2

= 3.4.38
- ensure add_existing and delete_existing are removed when list is not nested
- add :percentage list_ui, use jquery ui slider, set slider options on column.options[:slider], :value_method (default to column name), :min_method and :max_method to get value, min and max options from record
- fix default required for column with :checkbox form_ui and inclusion validator on rails 3.2
- fix search on habtm column on postgresql